# update-ip-endpoint

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/update_ip_endpoint/: __init__.py  main.py
tests/: __init__.py  test_server.py
